   call origination from the dialplan.
 * Voicemail now permits setting the emailsubject and emailbody per mailbox,
   in addition to the setting in the "general" context.
 * Added ConfBridge dialplan application which does conference bridges without
   DAHDI. For information on its use, please see the output of
   "core show application ConfBridge" from the CLI.

Miscellaneous
-------------
 * The Asterisk CLI has a new command, "channel redirect", which is similar in
   operation to the AMI Redirect action.
 * res_jabber: autoprune has been disabled by default, to avoid misconfiguration 
   that would end up being interpreted as a bug once Asterisk started removing 
   the contacts from a user list.
 * extensions.conf now allows you to use keyword "same" to define an extension
   without actually specifying an extension.  It uses exactly the same pattern
   as previously used on the last "exten" line.  For example:
     exten => 123,1,NoOp(something)
     same  =>     n,SomethingElse()
 * musiconhold.conf classes of type 'files' can now use relative directory paths,
   which are interpreted as relative to the astvarlibdir setting in asterisk.conf.
 * All deprecated CLI commands are removed from the sourcecode. They are now handled
   by the new clialiases module. See cli_aliases.conf.sample file.
 * Times within timespecs are now accurate down to the minute.  This is a change
   from historical Asterisk, which only provided timespecs rounded to the nearest
   even (read: evenly divisible by 2) minute mark.
 * The realtime switch now supports an option flag, 'p', which disables searches for
   pattern matches.
 * In addition to a time range and date range, timespecs now accept a 5th optional
   argument, timezone.  This allows you to perform time checks on alternate
   timezones, especially if those daylight savings time ranges vary from your
   machine's native timezone.  See GotoIfTime, ExecIfTime, IFTIME(), and timed
   includes.